<resources>
    <string name="app_name">cook_master_android</string>
    <string name="enter_email">Entrez votre email</string>
    <string name="enter_password">Entrez votre mot de passe</string>
    <string name="login">Se connecter</string>
    <string name="register">Créer un compte</string>
    <string name="dont_have_account">Pas encore de compte ?</string>
    <string name="invalid_credentials">Informations de connexion invalides</string>
    <string name="email">Adresse mail</string>
    <string name="password">Mot de passe</string>
    <string name="godfather_key">Clé de parrainage</string>
    <string name="confirm_password">Confirmez le mot de passe</string>
    <string name="already_registered">Vous avez déjà un compte ?</string>
    <string name="field_cannot_be_empty">Ce champ est requis</string>
    <string name="password_no_match">Les mots de passe ne correspondent pas</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="error_happened">Une erreur est apparu, réessayer plus tard</string>
    <string name="formations">Formations</string>
    <string name="user_profile">Profil</string>
    <string name="courses">Cours</string>
    <string name="retour">Retour</string>
    <string name="afficher_le_certificat">Afficher le certificat</string>
    <string name="cours_de_la_formation">Cours de la formation :</string>
    <string name="s_abonner">S\'abonner</string>
</resources>