<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!-- The logo -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="329dp"
        android:src="@drawable/logo" />

    <!--Two fields used to connect -->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_username" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_password" />


    <!-- Make button go bottom -->
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <!-- Login and register button -->
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/register" />

</LinearLayout>